--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="bg-bg-color min-h-screen grid place-content-center font-outfit px-1 sm:p-0">
     <div class="w-full max-w-xs bg-white rounded-2xl overflow-auto p-4 shadow-xl">
-        <img class="block rounded-xl" src="assets/images/image-qr-code.png" alt="QR Code">
+        <img class="rounded-xl" src="assets/images/image-qr-code.png" alt="QR Code">
         <div class="text-center space-y-2.5 mt-5 mb-4 px-3">
             <h1 class="font-bold text-xl text-h1-color">Improve your front-end skills by building projects</h1>
             <p class="text-p-color text-pSize">
