--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="bg-bg-color min-h-screen grid place-content-center font-outfit px-1 sm:p-0">
+<body class="bg-bg-color min-h-screen grid place-content-center font-outfit px-2 py-4">
     <div class="w-full max-w-xs bg-white rounded-2xl overflow-auto p-4 shadow-xl">
         <img class="rounded-xl" src="assets/images/image-qr-code.png" alt="QR Code">
         <div class="text-center space-y-2.5 mt-5 mb-4 px-3">
