--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Jena Carry, Frontend Mentor, QR code component">
+    <meta name="author" content="Jena Carry">
+    <meta name="description" content="Page built for a Frontend Mentor challenge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
     <title>Frontend Mentor | QR code component</title>
@@ -11,7 +14,8 @@
 </head>
 
 <body class="bg-bg-color min-h-screen grid place-content-center font-outfit px-2 py-4">
-    <div class="w-full max-w-xs bg-white rounded-2xl overflow-auto p-4 shadow-xl">
+    <main class="w-full max-w-xs bg-white rounded-2xl overflow-auto p-4 shadow-xl">
+        <h1 class="sr-only">QR code component</h1>
         <img class="rounded-xl" src="assets/images/image-qr-code.png" alt="QR Code">
         <div class="text-center space-y-2.5 mt-5 mb-4 px-3">
             <h1 class="font-bold text-xl text-h1-color">Improve your front-end skills by building projects</h1>
@@ -20,7 +24,7 @@
                 the next level
             </p>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
