--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-bg-color min-h-screen grid place-content-center font-outfit px-2 py-4">
     <main class="w-full max-w-xs bg-white rounded-2xl overflow-auto p-4 shadow-xl">
         <h1 class="sr-only">QR code component</h1>
-        <img class="rounded-xl" src="assets/images/image-qr-code.png" alt="QR Code">
+        <img class="rounded-xl" src="assets/images/image-qr-code.png" alt="QR Code" width="576" height="576">
         <div class="text-center space-y-2.5 mt-5 mb-4 px-3">
             <h1 class="font-bold text-xl text-h1-color">Improve your front-end skills by building projects</h1>
             <p class="text-p-color text-pSize">
